[package]
name = "quadratic-equations-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
far = "0.2.1"
lalrpop = "0.19"

[dependencies]
far = "0.2.1"
lalrpop-util = {version = "0.19", features = ["lexer"]}
regex = "1"

[features]
